--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/lodash": "^4.17.19",
     "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
